# fges-causal

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  sample.envrc  write_requirements.sh
.github/workflows/: python-ci.yml
docs/: SETUP.md  STANDARDS.md  project_README.md
notebooks/: README.md
src/: pyproject.toml
tests/: example_test.py
