[tool.poetry]
name = "naston-project-template"
version = "0.1.0"
description = "A base template for python projects"
authors = ["Nathan <nathan@planetpaull.com>"]
license = "Proprietary"
readme = "README.md"
packages = [{include = "valkyrie_project_template"}]

[tool.poetry.dependencies]
python = "^3.8"
ruff = "^0.0.267"
pandas = "^2.0.1"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
black = "^23.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.267"
pandas = "^2.0.1"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
pre-commit = "^3.3.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"